--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -13,6 +13,7 @@
 
 
     <EditText
+        android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="password"
@@ -44,7 +45,8 @@
         >
 
 
-        <TextView
+        <Button
+            android:id="@+id/btn1"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
             android:text="1"
@@ -56,6 +58,7 @@
 
 
         <TextView
+            android:id="@+id/btn2"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
             android:text="2"
@@ -67,6 +70,7 @@
 
 
         <TextView
+            android:id="@+id/btn3"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
             android:text="2"
@@ -88,9 +92,10 @@
 
 
         <TextView
+            android:id="@+id/btn4"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
-            android:text="1"
+            android:text="4"
             android:gravity="center"
             android:background="@drawable/oval_btn_lock_screen"
             android:layout_margin="@dimen/lock_btn_margin"
@@ -99,20 +104,22 @@
 
 
         <TextView
+            android:id="@+id/btn5"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
-            android:text="2"
+            android:text="5"
             android:gravity="center"
             android:background="@drawable/oval_btn_lock_screen"
-            androidgggggg:layout_margin="@dimen/lock_btn_margin"
+            android:layout_margin="@dimen/lock_btn_margin"
             />
 
 
 
         <TextView
+            android:id="@+id/btn6"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
-            android:text="2"
+            android:text="6"
             android:gravity="center"
             android:background="@drawable/oval_btn_lock_screen"
             android:layout_margin="@dimen/lock_btn_margin"
@@ -130,10 +137,11 @@
         >
 
 
-        <TextView
+        <Button
+            android:id="@+id/btn7"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
-            android:text="1"
+            android:text="7"
             android:gravity="center"
             android:background="@drawable/oval_btn_lock_screen"
             android:layout_margin="@dimen/lock_btn_margin"
@@ -142,9 +150,10 @@
 
 
         <TextView
+            android:id="@+id/btn8"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
-            android:text="2"
+            android:text="8"
             android:gravity="center"
             android:background="@drawable/oval_btn_lock_screen"
             android:layout_margin="@dimen/lock_btn_margin"
@@ -153,9 +162,10 @@
 
 
         <TextView
+            android:id="@+id/btn9"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
-            android:text="2"
+            android:text="9"
             android:gravity="center"
             android:background="@drawable/oval_btn_lock_screen"
             android:layout_margin="@dimen/lock_btn_margin"
@@ -165,7 +175,7 @@
     </LinearLayout>
 
 
-    <!--7,8,9-->
+    <!--c,0,>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -174,7 +184,8 @@
         >
 
 
-        <TextView
+        <Button
+            android:id="@+id/btnC"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
             android:text="C"
@@ -185,7 +196,8 @@
 
 
 
-        <TextView
+        <Button
+            android:id="@+id/btn0"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
             android:text="0"
@@ -197,6 +209,7 @@
 
 
         <ImageView
+            android:id="@+id/btnEnter"
             android:layout_width="@dimen/lock_btn_width"
             android:layout_height="@dimen/lock_btn_height"
             android:src="@drawable/ic_go"
@@ -211,6 +224,7 @@
 
 
     <ImageView
+        android:id="@+id/btnClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_cancel"
