--- a/app/src/main/res/layout/task_type_item_drop.xml
+++ b/app/src/main/res/layout/task_type_item_drop.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="item type"
-        android:drawablePadding="10dp"
-        android:drawableEnd="@drawable/ic_keyboard_arrow_down"
+        android:textColor="@color/create_task_main_color"
         />
+
 </FrameLayout>
