--- a/app/src/main/res/drawable/task_item_img_border.xml
+++ b/app/src/main/res/drawable/task_item_img_border.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
+    <size android:height="50dp" android:width="50dp"/>
     <stroke android:width="1dp" android:color="#938b8e"/>
 </shape>
