--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -37,116 +37,131 @@
 
     </FrameLayout>
 
-    
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/task_item_img_border"
-        android:scaleType="centerInside"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-
-        />
-    
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="20dp">
-
-
-
-        <Spinner
-            android:id="@+id/createTaskSpinner"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/createTaskImg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/task_item_img_border"
+                android:scaleType="center"
+                android:padding="10dp"
+                tools:src="@drawable/ic_medium"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+
+                />
 
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/create_task_divider"
-            />
-
-        <EditText
-            android:id="@+id/createTaskTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:hint="Title"
-            android:inputType="text"
-
-            android:textColor="@color/white"
-            android:maxLines="1"
-            android:padding="10dp"
-            android:textColorHint="@color/createTaskHint"
-            android:textSize="18sp"
-            android:layout_marginTop="10dp"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/create_task_divider"
-            />
-
-        <EditText
-            android:id="@+id/createTaskDesc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:hint="Description"
-            android:inputType="textMultiLine"
-            android:maxLines="2"
-            android:textColor="@color/white"
-            android:lines="2"
-            android:padding="10dp"
-            android:textColorHint="@color/createTaskHint"
-            android:textSize="18sp"
-            android:layout_marginTop="10dp"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/create_task_divider"
-            />
-
-
-        <TextView
-            android:id="@+id/createTaskTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:hint="Time"
-            android:padding="10dp"
-            android:textColorHint="@color/createTaskHint"
-            android:textSize="18sp"
-            android:layout_marginTop="10dp"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/create_task_divider"
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="20dp">
 
 
 
+                <Spinner
+                    android:id="@+id/createTaskSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    />
 
-        <Button
-            android:id="@+id/createTaskBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Create New Task"
-            android:textSize="13sp"
-            android:background="#209470"
-            android:layout_marginTop="50dp"
-            />
 
-    </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/create_task_divider"
+                    />
+
+                <EditText
+                    android:id="@+id/createTaskTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:hint="Title"
+                    android:inputType="text"
+
+                    android:textColor="@color/white"
+                    android:maxLines="1"
+                    android:padding="10dp"
+                    android:textColorHint="@color/createTaskHint"
+                    android:textSize="18sp"
+                    android:layout_marginTop="10dp"
+                    />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/create_task_divider"
+                    />
+
+                <EditText
+                    android:id="@+id/createTaskDesc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:hint="Description"
+                    android:inputType="textMultiLine"
+                    android:maxLines="2"
+                    android:textColor="@color/white"
+                    android:lines="2"
+                    android:padding="10dp"
+                    android:textColorHint="@color/createTaskHint"
+                    android:textSize="18sp"
+                    android:layout_marginTop="10dp"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/create_task_divider"
+                    />
+
+
+                <TextView
+                    android:id="@+id/createTaskTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:hint="Time"
+                    android:padding="10dp"
+                    android:textColorHint="@color/createTaskHint"
+                    android:textSize="18sp"
+                    android:layout_marginTop="10dp"
+                    />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/create_task_divider"
+                    />
+
+
+
+
+                <Button
+                    android:id="@+id/createTaskBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Create New Task"
+                    android:textSize="13sp"
+                    android:background="#209470"
+                    android:layout_marginTop="50dp"
+                    />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+    </ScrollView>
+
 
 </LinearLayout>
