--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -37,12 +37,20 @@
 
     </FrameLayout>
 
-    
-    <ImageView
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/editTaskImg"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@drawable/task_item_img_border"
-        android:scaleType="centerInside"
+        android:scaleType="centerCrop"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
@@ -159,5 +167,9 @@
             />
 
     </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
