--- a/app/src/main/res/layout/list_item_adapter.xml
+++ b/app/src/main/res/layout/list_item_adapter.xml
@@ -17,6 +17,7 @@
         android:id="@+id/itemImg"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:scaleType="centerCrop"
         android:background="@drawable/task_item_img_border"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
