--- a/app/src/main/res/layout/list_item_adapter.xml
+++ b/app/src/main/res/layout/list_item_adapter.xml
@@ -15,12 +15,13 @@
 
     <ImageView
         android:id="@+id/itemImg"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:scaleType="centerCrop"
+        android:layout_width="@dimen/task_img_width_height"
+        android:layout_height="@dimen/task_img_width_height"
+        android:scaleType="centerInside"
         android:background="@drawable/task_item_img_border"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
         />
 
     <TextView
