--- a/app/src/main/res/drawable/ic_important.xml
+++ b/app/src/main/res/drawable/ic_important.xml
@@ -1,66 +1,20 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:aapt="http://schemas.android.com/aapt"
-        android:width="48dp"
-        android:height="48dp"
-        android:viewportWidth="48.0"
-        android:viewportHeight="48.0">
-    <path
-        android:pathData="M45.43,41.38A7.44,21.15 90,1 1,3.14 41.38A7.44,21.15 90,1 1,45.43 41.38z"
-        android:strokeLineCap="butt"
-        android:fillAlpha="0.41"
-        android:fillType="nonZero"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1.10533953"
-        android:strokeLineJoin="miter"
-        android:strokeAlpha="0.41"/>
-    <path
-        android:pathData="M45.09,21.4A20.79,20.79 0,1 1,3.51 21.4A20.79,20.79 0,1 1,45.09 21.4z"
-        android:strokeLineCap="round"
-        android:fillAlpha="1"
-        android:fillType="nonZero"
-        android:strokeColor="#680000"
-        android:fillColor="#cc0000"
-        android:strokeWidth="0.98214942"
-        android:strokeLineJoin="round"
-        android:strokeAlpha="1"/>
-    <path
-        android:pathData="M44.56,21.31A20.12,20.12 103.43,1 1,4.32 21.31A20.12,20.12 103.43,1 1,44.56 21.31z"
-        android:strokeLineCap="round"
-        android:fillAlpha="1"
-        android:fillType="nonZero"
-        android:strokeColor="#ef2929"
-        android:fillColor="#00000000"
-        android:strokeWidth="0.98214942"
-        android:strokeLineJoin="round"
-        android:strokeAlpha="1"/>
-    <path
-        android:pathData="M21.46,10.37C21.34,10.37 21.23,10.55 21.23,10.76L22.3,25.2C22.3,25.41 22.4,25.58 22.53,25.58C22.53,25.58 23.37,25.59 24.06,25.58C24.29,25.58 24.36,25.6 24.57,25.58C25.26,25.59 26.1,25.58 26.1,25.58C26.23,25.58 26.34,25.41 26.34,25.2L27.4,10.76C27.4,10.55 27.3,10.4 27.17,10.4L24.59,10.4C24.58,10.4 24.58,10.37 24.57,10.37L21.46,10.37z"
-        android:strokeLineCap="round"
-        android:fillAlpha="1"
-        android:fillType="nonZero"
-        android:strokeColor="#00000000"
-        android:fillColor="#ffffff"
-        android:strokeWidth="4.12249994"
-        android:strokeLineJoin="round"
-        android:strokeAlpha="1"/>
-    <path
-        android:pathData="M26.66,30.19A2.3,2.3 0,1 1,22.06 30.19A2.3,2.3 0,1 1,26.66 30.19z"
-        android:strokeLineCap="round"
-        android:fillAlpha="1"
-        android:fillType="nonZero"
-        android:strokeColor="#00000000"
-        android:fillColor="#ffffff"
-        android:strokeWidth="4.12249994"
-        android:strokeLineJoin="round"
-        android:strokeAlpha="1"/>
-    <path
-        android:pathData="M43.68,20.48C43.68,31.31 37.62,16.17 25,20.86C12.28,25.59 4.44,31.31 4.44,20.48C4.44,9.65 13.23,0.86 24.06,0.86C34.89,0.86 43.68,9.65 43.68,20.48z"
-        android:strokeLineCap="round"
-        android:fillAlpha="0.21390375"
-        android:fillType="nonZero"
-        android:strokeColor="#00000000"
-        android:fillColor="#fffeff"
-        android:strokeWidth="1"
-        android:strokeLineJoin="round"
-        android:strokeAlpha="1"/>
+<vector
+    android:height="44dp"
+    android:viewportHeight="416.42667"
+    android:viewportWidth="416.0"
+    android:width="44dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#ea3457" android:pathData="m309.1,43.7c-27.3,-23 -62.6,-36.9 -101.1,-36.9 -86.7,0 -157,70.3 -157,157 0,56.7 30.1,106.4 75.1,134v111.8l83.5,-34.1 80.4,34.1v-111.8c45,-27.6 75.1,-77.3 75.1,-134 0,-30 -8.4,-58.1 -23,-81.9"/>
+    <path android:fillColor="#602f75" android:pathData="m126.1,416.4c-1.3,0 -2.7,-0.4 -3.8,-1.2 -1.9,-1.3 -3,-3.4 -3,-5.7v-108c-47.1,-30.4 -75.1,-81.6 -75.1,-137.7 0,-90.3 73.5,-163.8 163.8,-163.8 38.6,0 76,13.7 105.5,38.5 2.9,2.4 3.3,6.7 0.8,9.6 -2.4,2.9 -6.7,3.3 -9.6,0.8 -27,-22.7 -61.3,-35.3 -96.7,-35.3 -82.8,0 -150.2,67.4 -150.2,150.2 0,52.7 26.9,100.6 71.8,128.1 2,1.2 3.3,3.4 3.3,5.8v101.6l74.1,-30.3c1.7,-0.7 3.6,-0.7 5.3,0l70.9,30.1v-101.5c0,-2.4 1.2,-4.6 3.3,-5.8 45,-27.6 71.8,-75.5 71.8,-128.1 0,-27.7 -7.6,-54.8 -22,-78.4 -2,-3.2 -1,-7.4 2.3,-9.4 3.2,-2 7.4,-1 9.4,2.3 15.7,25.7 24.1,55.2 24.1,85.5 0,56.2 -28,107.4 -75.1,137.7v108c0,2.3 -1.2,4.4 -3.1,5.7 -1.9,1.3 -4.3,1.5 -6.4,0.6l-77.7,-33 -80.8,33.1c-0.8,0.3 -1.7,0.5 -2.6,0.5zM126.1,416.4"/>
+    <path android:fillColor="#00e7ff" android:pathData="m167.1,355c-3.8,0 -6.8,-3.1 -6.8,-6.8v-20.5c0,-3.8 3.1,-6.8 6.8,-6.8s6.8,3.1 6.8,6.8v20.5c0,3.8 -3.1,6.8 -6.8,6.8zM167.1,355"/>
+    <path android:fillColor="#00e7ff" android:pathData="m208.1,355c-3.8,0 -6.8,-3.1 -6.8,-6.8v-20.5c0,-3.8 3.1,-6.8 6.8,-6.8 3.8,0 6.8,3.1 6.8,6.8v20.5c0,3.8 -3.1,6.8 -6.8,6.8zM208.1,355"/>
+    <path android:fillColor="#00e7ff" android:pathData="m249,355c-3.8,0 -6.8,-3.1 -6.8,-6.8v-20.5c0,-3.8 3.1,-6.8 6.8,-6.8 3.8,0 6.8,3.1 6.8,6.8v20.5c0,3.8 -3.1,6.8 -6.8,6.8zM249,355"/>
+    <path android:fillColor="#ffe600" android:pathData="m208.1,218.5 l-23.6,41h47.3zM208.1,218.5"/>
+    <path android:fillColor="#602f75" android:pathData="m231.7,266.2h-47.3c-2.4,0 -4.7,-1.3 -5.9,-3.4s-1.2,-4.7 0,-6.8l23.6,-41c2.4,-4.2 9.4,-4.2 11.8,0l23.6,41c1.2,2.1 1.2,4.7 0,6.8s-3.5,3.4 -5.9,3.4zM196.2,252.6h23.6l-11.8,-20.5zM196.2,252.6"/>
+    <path android:fillColor="#fff" android:pathData="m100.9,97.5c-1.3,0 -2.7,-0.4 -3.8,-1.2 -3.1,-2.1 -3.9,-6.4 -1.8,-9.5 15.2,-22.2 36.4,-39.3 61.2,-49.4 3.5,-1.4 7.5,0.3 8.9,3.7 1.4,3.5 -0.3,7.5 -3.7,8.9 -22.3,9.1 -41.4,24.5 -55.1,44.5 -1.3,1.9 -3.5,3 -5.6,3zM100.9,97.5"/>
+    <path android:fillColor="#ffe600" android:pathData="m221.7,163.8c0,30.2 24.4,54.6 54.6,54.6 30.2,0 54.6,-24.5 54.6,-54.6 0,-12.4 -4.1,-23.8 -11.1,-33zM221.7,163.8"/>
+    <path android:fillColor="#602f75" android:pathData="m276.3,225.3c-33.9,0 -61.4,-27.6 -61.4,-61.4 0,-2.9 1.9,-5.5 4.7,-6.5l98.1,-33c2.8,-0.9 5.8,0 7.6,2.3 8.2,10.8 12.5,23.6 12.5,37.1 0,33.9 -27.6,61.4 -61.4,61.4zM228.8,168.7c2.4,24.1 22.8,43 47.5,43 26.3,0 47.8,-21.4 47.8,-47.8 0,-8.9 -2.4,-17.4 -7,-24.9zM228.8,168.7"/>
+    <path android:fillColor="#ffe600" android:pathData="m194.4,163.8c0,30.2 -24.4,54.6 -54.6,54.6 -30.2,0 -54.6,-24.5 -54.6,-54.6 0,-12.4 4.1,-23.8 11.1,-33zM194.4,163.8"/>
+    <path android:fillColor="#602f75" android:pathData="m139.8,225.3c-33.9,0 -61.4,-27.6 -61.4,-61.4 0,-13.5 4.3,-26.4 12.5,-37.1 1.8,-2.3 4.8,-3.3 7.6,-2.3l98.1,33c2.8,0.9 4.7,3.5 4.7,6.5 0,33.9 -27.6,61.4 -61.4,61.4zM99,138.9c-4.6,7.5 -7,16 -7,24.9 0,26.3 21.4,47.8 47.8,47.8 24.7,0 45.1,-18.9 47.5,-43zM99,138.9"/>
+    <path android:fillColor="#00e7ff" android:pathData="m262.7,348.2h-109.2c-3.8,0 -6.8,-3.1 -6.8,-6.8 0,-3.8 3.1,-6.8 6.8,-6.8h109.2c3.8,0 6.8,3.1 6.8,6.8 0,3.8 -3.1,6.8 -6.8,6.8zM262.7,348.2"/>
 </vector>
