--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
@@ -10,134 +10,121 @@
         android:layout_width="match_parent"
         android:layout_height="200dp">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/bg"
-        android:scaleType="fitXY"
-        />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/bg" />
 
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_constraintHorizontal_weight=".5"
-            app:layout_constraintVertical_weight=".5"
-            app:layout_constraintHorizontal_bias=".5"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent=".62"
-            app:layout_constraintStart_toStartOf="parent"
-            android:foreground="#38ffffff"
             android:elevation="2dp"
-            >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your Things"
-            android:maxEms="3"
-            android:maxLines="2"
-            android:textSize="32sp"
-            android:layout_marginStart="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:foreground="#38ffffff"
+            android:orientation="vertical"
+            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintHorizontal_weight=".5"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_gravity="center_vertical"
-            />
+            app:layout_constraintVertical_weight=".5"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent=".62">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"
+                android:maxEms="3"
+                android:maxLines="2"
+                android:text="Your Things"
+                android:textSize="32sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:background="#1920e2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_gravity="bottom"
-            />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_gravity="bottom"
+                android:background="#1920e2"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
         </FrameLayout>
 
         <!--personal-->
         <TextView
-            android:id="@+id/personValue"
+            android:id="@+id/allValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="24"
             android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.75"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="personal"
-            android:textSize="12sp"
+            android:text="Tasks"
             android:textColor="#9bffffff"
-            app:layout_constraintTop_toBottomOf="@id/personValue"
-            app:layout_constraintStart_toStartOf="@id/personValue"
-            />
-
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@id/allValue"
+            app:layout_constraintTop_toBottomOf="@id/allValue" />
 
 
         <!--Business-->
 
         <TextView
-            android:id="@+id/businessValue"
+            android:id="@+id/doneValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="14"
             android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="14"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/personValue"
-            />
+            app:layout_constraintStart_toEndOf="@id/allValue"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Business"
-            android:textSize="12sp"
+            android:text="Done"
             android:textColor="#9bffffff"
-            app:layout_constraintTop_toBottomOf="@id/businessValue"
-            app:layout_constraintStart_toStartOf="@id/businessValue"
-            />
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@id/doneValue"
+            app:layout_constraintTop_toBottomOf="@id/doneValue" />
 
         <ProgressBar
             android:id="@+id/progress"
-    android:layout_width="30dp"
-    android:layout_height="30dp"
-    style="?android:attr/progressBarStyleHorizontal"
-    android:indeterminate="false"
-    android:progress="65"
-    android:secondaryProgress="100"
-    android:max="100"
-    android:progressDrawable="@drawable/progress_drawable"
-    android:layout_marginBottom="10dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintHorizontal_bias=".75"
-    />
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="10dp"
+            android:indeterminate="false"
+            android:max="100"
+            android:progress="65"
+            android:progressDrawable="@drawable/progress_drawable"
+            android:secondaryProgress="100"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".75"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
+            android:id="@+id/donePercent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="65% done"
-            android:textSize="12sp"
             android:textColor="#9bffffff"
+            android:textSize="12sp"
 
-            app:layout_constraintTop_toTopOf="@id/progress"
             app:layout_constraintBottom_toBottomOf="@id/progress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/progress"
-            />
-
-
-
+            app:layout_constraintTop_toTopOf="@id/progress" />
 
 
     </android.support.constraint.ConstraintLayout>
@@ -146,8 +133,7 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
 
         <FrameLayout
@@ -178,17 +164,14 @@
                 android:id="@+id/fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_add"
                 android:layout_gravity="bottom|end"
                 android:layout_margin="15dp"
-                />
+                android:src="@drawable/ic_add" />
 
         </FrameLayout>
 
 
     </android.support.v4.widget.SwipeRefreshLayout>
-
-
 
 
 </LinearLayout>
