--- a/app/src/main/res/layout/task_type_item.xml
+++ b/app/src/main/res/layout/task_type_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="item type"
+        tools:text="item type"
+        android:padding="10dp"
         android:drawablePadding="10dp"
         android:drawableEnd="@drawable/ic_keyboard_arrow_down"
         />
